parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComment

Grammar

Rule 0     S' -> program
Rule 1     program -> bloque
Rule 2     bloque -> TkOBlock t TkCBlock
Rule 3     t -> casoInstrucciones
Rule 4     t -> TkDeclare declaracionVariables casoInstrucciones
Rule 5     declaracionVariables -> listaDeclaraciones TkTwoPoints tipos TkSemicolon declaracionVariables
Rule 6     declaracionVariables -> listaDeclaraciones TkTwoPoints tipos
Rule 7     tipos -> tipo TkComma tipos
Rule 8     tipos -> tipo
Rule 9     listaDeclaraciones -> TkId TkComma listaDeclaraciones
Rule 10    listaDeclaraciones -> TkId
Rule 11    asignacion -> TkId TkAsig listaExpresion
Rule 12    asignacion -> TkId TkAsig asignacionArreglos
Rule 13    listaExpresion -> listaExpresion TkComma expresion
Rule 14    listaExpresion -> expresion
Rule 15    asignacionArreglos -> TkId listaIndices posicionArreglo
Rule 16    listaIndices -> listaIndices TkOpenPar number TkTwoPoints number TkClosePar
Rule 17    listaIndices -> TkOpenPar number TkTwoPoints number TkClosePar
Rule 18    posicionArreglo -> TkOBracket number TkCBracket
Rule 19    posicionArreglo -> empty
Rule 20    casoInstrucciones -> Instruccion
Rule 21    casoInstrucciones -> casoInstrucciones TkSemicolon Instruccion
Rule 22    Instruccion -> If
Rule 23    Instruccion -> For
Rule 24    Instruccion -> Do
Rule 25    Instruccion -> singleInstruccion
Rule 26    singleInstruccion -> asignacion
Rule 27    singleInstruccion -> read
Rule 28    singleInstruccion -> print
Rule 29    If -> TkIf condicion TkArrow bloque variasGuardias TkFi
Rule 30    If -> TkIf condicion TkArrow singleInstruccion variasGuardias TkFi
Rule 31    If -> TkIf condicion TkArrow expresion variasGuardias TkFi
Rule 32    If -> TkIf TkOpenPar condicion TkClosePar TkArrow bloque variasGuardias TkFi
Rule 33    If -> TkIf TkOpenPar condicion TkClosePar TkArrow singleInstruccion variasGuardias TkFi
Rule 34    If -> TkIf TkOpenPar condicion TkClosePar TkArrow expresion variasGuardias TkFi
Rule 35    variasGuardias -> TkGuard condicion TkArrow bloque variasGuardias
Rule 36    variasGuardias -> TkGuard condicion TkArrow print variasGuardias
Rule 37    variasGuardias -> empty
Rule 38    For -> TkFor TkId TkIn expresion TkTo expresion TkArrow bloque TkRof
Rule 39    Do -> TkDo condicion TkArrow bloque variasGuardias TkOd
Rule 40    Do -> TkDo condicion TkArrow singleInstruccion variasGuardias TkOd
Rule 41    Do -> TkDo condicion TkArrow expresion variasGuardias TkOd
Rule 42    Do -> TkDo TkOpenPar condicion TkClosePar TkArrow bloque variasGuardias TkOd
Rule 43    Do -> TkDo TkOpenPar condicion TkClosePar TkArrow singleInstruccion variasGuardias TkOd
Rule 44    Do -> TkDo TkOpenPar condicion TkClosePar TkArrow expresion variasGuardias TkOd
Rule 45    condicion -> expresion
Rule 46    condicion -> condicion operadorBool expresion
Rule 47    operadorBool -> TkAnd
Rule 48    operadorBool -> TkOr
Rule 49    operadorBool -> TkNot
Rule 50    relacion -> TkLess
Rule 51    relacion -> TkGreater
Rule 52    relacion -> TkLeq
Rule 53    relacion -> TkGeq
Rule 54    relacion -> TkEqual
Rule 55    relacion -> TkNEqual
Rule 56    read -> TkRead TkId
Rule 57    print -> TkPrint concatPrint
Rule 58    print -> TkPrintln concatPrint
Rule 59    concatPrint -> concatPrint TkConcat expresion
Rule 60    concatPrint -> expresion
Rule 61    tipo -> TkBool
Rule 62    tipo -> TkInt
Rule 63    tipo -> TkArray TkOBracket number TkSoForth number TkCBracket
Rule 64    number -> TkNum
Rule 65    number -> TkMinus TkNum
Rule 66    empty -> <empty>
Rule 67    expresion -> term
Rule 68    expresion -> addingOperator term
Rule 69    expresion -> operadorBool expresion
Rule 70    expresion -> expresion addingOperator term
Rule 71    expresion -> expresion relacion expresion
Rule 72    expresion -> embed
Rule 73    addingOperator -> TkPlus
Rule 74    addingOperator -> TkMinus
Rule 75    term -> factor
Rule 76    term -> term multiplyingOperator factor
Rule 77    multiplyingOperator -> TkMult
Rule 78    multiplyingOperator -> TkDiv
Rule 79    multiplyingOperator -> TkMod
Rule 80    factor -> TkId
Rule 81    factor -> TkNum
Rule 82    factor -> TkString
Rule 83    factor -> TkTrue
Rule 84    factor -> TkFalse
Rule 85    factor -> TkMinus TkNum
Rule 86    factor -> TkOpenPar expresion TkClosePar
Rule 87    factor -> TkId TkOBracket expresion TkCBracket
Rule 88    embed -> TkMax TkOpenPar TkId TkClosePar
Rule 89    embed -> TkMin TkOpenPar TkId TkClosePar
Rule 90    embed -> TkAtoi TkOpenPar TkId TkClosePar
Rule 91    embed -> TkSize TkOpenPar TkId TkClosePar

Terminals, with rules where they appear

TkAnd                : 47
TkArray              : 63
TkArrow              : 29 30 31 32 33 34 35 36 38 39 40 41 42 43 44
TkAsig               : 11 12
TkAtoi               : 90
TkBool               : 61
TkCBlock             : 2
TkCBracket           : 18 63 87
TkClosePar           : 16 17 32 33 34 42 43 44 86 88 89 90 91
TkComma              : 7 9 13
TkComment            : 
TkConcat             : 59
TkDeclare            : 4
TkDiv                : 78
TkDo                 : 39 40 41 42 43 44
TkEqual              : 54
TkFalse              : 84
TkFi                 : 29 30 31 32 33 34
TkFor                : 38
TkGeq                : 53
TkGreater            : 51
TkGuard              : 35 36
TkId                 : 9 10 11 12 15 38 56 80 87 88 89 90 91
TkIf                 : 29 30 31 32 33 34
TkIn                 : 38
TkInt                : 62
TkLeq                : 52
TkLess               : 50
TkMax                : 88
TkMin                : 89
TkMinus              : 65 74 85
TkMod                : 79
TkMult               : 77
TkNEqual             : 55
TkNot                : 49
TkNum                : 64 65 81 85
TkOBlock             : 2
TkOBracket           : 18 63 87
TkOd                 : 39 40 41 42 43 44
TkOpenPar            : 16 17 32 33 34 42 43 44 86 88 89 90 91
TkOr                 : 48
TkPlus               : 73
TkPrint              : 57
TkPrintln            : 58
TkRead               : 56
TkRof                : 38
TkSemicolon          : 5 21
TkSize               : 91
TkSoForth            : 63
TkString             : 82
TkTo                 : 38
TkTrue               : 83
TkTwoPoints          : 5 6 16 17
error                : 

Nonterminals, with rules where they appear

Do                   : 24
For                  : 23
If                   : 22
Instruccion          : 20 21
addingOperator       : 68 70
asignacion           : 26
asignacionArreglos   : 12
bloque               : 1 29 32 35 38 39 42
casoInstrucciones    : 3 4 21
concatPrint          : 57 58 59
condicion            : 29 30 31 32 33 34 35 36 39 40 41 42 43 44 46
declaracionVariables : 4 5
embed                : 72
empty                : 19 37
expresion            : 13 14 31 34 38 38 41 44 45 46 59 60 69 70 71 71 86 87
factor               : 75 76
listaDeclaraciones   : 5 6 9
listaExpresion       : 11 13
listaIndices         : 15 16
multiplyingOperator  : 76
number               : 16 16 17 17 18 63 63
operadorBool         : 46 69
posicionArreglo      : 15
print                : 28 36
program              : 0
read                 : 27
relacion             : 71
singleInstruccion    : 25 30 33 40 43
t                    : 2
term                 : 67 68 70 76
tipo                 : 7 8
tipos                : 5 6 7
variasGuardias       : 29 30 31 32 33 34 35 36 39 40 41 42 43 44

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . bloque
    (2) bloque -> . TkOBlock t TkCBlock

    TkOBlock        shift and go to state 2

    program                        shift and go to state 1
    bloque                         shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (2) bloque -> TkOBlock . t TkCBlock
    (3) t -> . casoInstrucciones
    (4) t -> . TkDeclare declaracionVariables casoInstrucciones
    (20) casoInstrucciones -> . Instruccion
    (21) casoInstrucciones -> . casoInstrucciones TkSemicolon Instruccion
    (22) Instruccion -> . If
    (23) Instruccion -> . For
    (24) Instruccion -> . Do
    (25) Instruccion -> . singleInstruccion
    (29) If -> . TkIf condicion TkArrow bloque variasGuardias TkFi
    (30) If -> . TkIf condicion TkArrow singleInstruccion variasGuardias TkFi
    (31) If -> . TkIf condicion TkArrow expresion variasGuardias TkFi
    (32) If -> . TkIf TkOpenPar condicion TkClosePar TkArrow bloque variasGuardias TkFi
    (33) If -> . TkIf TkOpenPar condicion TkClosePar TkArrow singleInstruccion variasGuardias TkFi
    (34) If -> . TkIf TkOpenPar condicion TkClosePar TkArrow expresion variasGuardias TkFi
    (38) For -> . TkFor TkId TkIn expresion TkTo expresion TkArrow bloque TkRof
    (39) Do -> . TkDo condicion TkArrow bloque variasGuardias TkOd
    (40) Do -> . TkDo condicion TkArrow singleInstruccion variasGuardias TkOd
    (41) Do -> . TkDo condicion TkArrow expresion variasGuardias TkOd
    (42) Do -> . TkDo TkOpenPar condicion TkClosePar TkArrow bloque variasGuardias TkOd
    (43) Do -> . TkDo TkOpenPar condicion TkClosePar TkArrow singleInstruccion variasGuardias TkOd
    (44) Do -> . TkDo TkOpenPar condicion TkClosePar TkArrow expresion variasGuardias TkOd
    (26) singleInstruccion -> . asignacion
    (27) singleInstruccion -> . read
    (28) singleInstruccion -> . print
    (11) asignacion -> . TkId TkAsig listaExpresion
    (12) asignacion -> . TkId TkAsig asignacionArreglos
    (56) read -> . TkRead TkId
    (57) print -> . TkPrint concatPrint
    (58) print -> . TkPrintln concatPrint

    TkDeclare       shift and go to state 8
    TkIf            shift and go to state 17
    TkFor           shift and go to state 13
    TkDo            shift and go to state 10
    TkId            shift and go to state 9
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 7
    TkPrintln       shift and go to state 11

    t                              shift and go to state 4
    casoInstrucciones              shift and go to state 5
    Instruccion                    shift and go to state 6
    read                           shift and go to state 12
    singleInstruccion              shift and go to state 14
    Do                             shift and go to state 16
    print                          shift and go to state 18
    asignacion                     shift and go to state 19
    If                             shift and go to state 20
    For                            shift and go to state 21

state 3

    (1) program -> bloque .

    $end            reduce using rule 1 (program -> bloque .)


state 4

    (2) bloque -> TkOBlock t . TkCBlock

    TkCBlock        shift and go to state 22


state 5

    (3) t -> casoInstrucciones .
    (21) casoInstrucciones -> casoInstrucciones . TkSemicolon Instruccion

    TkCBlock        reduce using rule 3 (t -> casoInstrucciones .)
    TkSemicolon     shift and go to state 23


state 6

    (20) casoInstrucciones -> Instruccion .

    TkSemicolon     reduce using rule 20 (casoInstrucciones -> Instruccion .)
    TkCBlock        reduce using rule 20 (casoInstrucciones -> Instruccion .)


state 7

    (57) print -> TkPrint . concatPrint
    (59) concatPrint -> . concatPrint TkConcat expresion
    (60) concatPrint -> . expresion
    (67) expresion -> . term
    (68) expresion -> . addingOperator term
    (69) expresion -> . operadorBool expresion
    (70) expresion -> . expresion addingOperator term
    (71) expresion -> . expresion relacion expresion
    (72) expresion -> . embed
    (75) term -> . factor
    (76) term -> . term multiplyingOperator factor
    (73) addingOperator -> . TkPlus
    (74) addingOperator -> . TkMinus
    (47) operadorBool -> . TkAnd
    (48) operadorBool -> . TkOr
    (49) operadorBool -> . TkNot
    (88) embed -> . TkMax TkOpenPar TkId TkClosePar
    (89) embed -> . TkMin TkOpenPar TkId TkClosePar
    (90) embed -> . TkAtoi TkOpenPar TkId TkClosePar
    (91) embed -> . TkSize TkOpenPar TkId TkClosePar
    (80) factor -> . TkId
    (81) factor -> . TkNum
    (82) factor -> . TkString
    (83) factor -> . TkTrue
    (84) factor -> . TkFalse
    (85) factor -> . TkMinus TkNum
    (86) factor -> . TkOpenPar expresion TkClosePar
    (87) factor -> . TkId TkOBracket expresion TkCBracket

    TkPlus          shift and go to state 35
    TkMinus         shift and go to state 25
    TkAnd           shift and go to state 29
    TkOr            shift and go to state 45
    TkNot           shift and go to state 44
    TkMax           shift and go to state 26
    TkMin           shift and go to state 24
    TkAtoi          shift and go to state 36
    TkSize          shift and go to state 37
    TkId            shift and go to state 32
    TkNum           shift and go to state 33
    TkString        shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 28
    TkOpenPar       shift and go to state 34

    embed                          shift and go to state 42
    factor                         shift and go to state 31
    term                           shift and go to state 38
    concatPrint                    shift and go to state 39
    operadorBool                   shift and go to state 27
    addingOperator                 shift and go to state 30
    expresion                      shift and go to state 43

state 8

    (4) t -> TkDeclare . declaracionVariables casoInstrucciones
    (5) declaracionVariables -> . listaDeclaraciones TkTwoPoints tipos TkSemicolon declaracionVariables
    (6) declaracionVariables -> . listaDeclaraciones TkTwoPoints tipos
    (9) listaDeclaraciones -> . TkId TkComma listaDeclaraciones
    (10) listaDeclaraciones -> . TkId

    TkId            shift and go to state 47

    declaracionVariables           shift and go to state 46
    listaDeclaraciones             shift and go to state 48

state 9

    (11) asignacion -> TkId . TkAsig listaExpresion
    (12) asignacion -> TkId . TkAsig asignacionArreglos

    TkAsig          shift and go to state 49


state 10

    (39) Do -> TkDo . condicion TkArrow bloque variasGuardias TkOd
    (40) Do -> TkDo . condicion TkArrow singleInstruccion variasGuardias TkOd
    (41) Do -> TkDo . condicion TkArrow expresion variasGuardias TkOd
    (42) Do -> TkDo . TkOpenPar condicion TkClosePar TkArrow bloque variasGuardias TkOd
    (43) Do -> TkDo . TkOpenPar condicion TkClosePar TkArrow singleInstruccion variasGuardias TkOd
    (44) Do -> TkDo . TkOpenPar condicion TkClosePar TkArrow expresion variasGuardias TkOd
    (45) condicion -> . expresion
    (46) condicion -> . condicion operadorBool expresion
    (67) expresion -> . term
    (68) expresion -> . addingOperator term
    (69) expresion -> . operadorBool expresion
    (70) expresion -> . expresion addingOperator term
    (71) expresion -> . expresion relacion expresion
    (72) expresion -> . embed
    (75) term -> . factor
    (76) term -> . term multiplyingOperator factor
    (73) addingOperator -> . TkPlus
    (74) addingOperator -> . TkMinus
    (47) operadorBool -> . TkAnd
    (48) operadorBool -> . TkOr
    (49) operadorBool -> . TkNot
    (88) embed -> . TkMax TkOpenPar TkId TkClosePar
    (89) embed -> . TkMin TkOpenPar TkId TkClosePar
    (90) embed -> . TkAtoi TkOpenPar TkId TkClosePar
    (91) embed -> . TkSize TkOpenPar TkId TkClosePar
    (80) factor -> . TkId
    (81) factor -> . TkNum
    (82) factor -> . TkString
    (83) factor -> . TkTrue
    (84) factor -> . TkFalse
    (85) factor -> . TkMinus TkNum
    (86) factor -> . TkOpenPar expresion TkClosePar
    (87) factor -> . TkId TkOBracket expresion TkCBracket

    TkOpenPar       shift and go to state 51
    TkPlus          shift and go to state 35
    TkMinus         shift and go to state 25
    TkAnd           shift and go to state 29
    TkOr            shift and go to state 45
    TkNot           shift and go to state 44
    TkMax           shift and go to state 26
    TkMin           shift and go to state 24
    TkAtoi          shift and go to state 36
    TkSize          shift and go to state 37
    TkId            shift and go to state 32
    TkNum           shift and go to state 33
    TkString        shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 28

    condicion                      shift and go to state 50
    term                           shift and go to state 38
    operadorBool                   shift and go to state 27
    factor                         shift and go to state 31
    embed                          shift and go to state 42
    addingOperator                 shift and go to state 30
    expresion                      shift and go to state 52

state 11

    (58) print -> TkPrintln . concatPrint
    (59) concatPrint -> . concatPrint TkConcat expresion
    (60) concatPrint -> . expresion
    (67) expresion -> . term
    (68) expresion -> . addingOperator term
    (69) expresion -> . operadorBool expresion
    (70) expresion -> . expresion addingOperator term
    (71) expresion -> . expresion relacion expresion
    (72) expresion -> . embed
    (75) term -> . factor
    (76) term -> . term multiplyingOperator factor
    (73) addingOperator -> . TkPlus
    (74) addingOperator -> . TkMinus
    (47) operadorBool -> . TkAnd
    (48) operadorBool -> . TkOr
    (49) operadorBool -> . TkNot
    (88) embed -> . TkMax TkOpenPar TkId TkClosePar
    (89) embed -> . TkMin TkOpenPar TkId TkClosePar
    (90) embed -> . TkAtoi TkOpenPar TkId TkClosePar
    (91) embed -> . TkSize TkOpenPar TkId TkClosePar
    (80) factor -> . TkId
    (81) factor -> . TkNum
    (82) factor -> . TkString
    (83) factor -> . TkTrue
    (84) factor -> . TkFalse
    (85) factor -> . TkMinus TkNum
    (86) factor -> . TkOpenPar expresion TkClosePar
    (87) factor -> . TkId TkOBracket expresion TkCBracket

    TkPlus          shift and go to state 35
    TkMinus         shift and go to state 25
    TkAnd           shift and go to state 29
    TkOr            shift and go to state 45
    TkNot           shift and go to state 44
    TkMax           shift and go to state 26
    TkMin           shift and go to state 24
    TkAtoi          shift and go to state 36
    TkSize          shift and go to state 37
    TkId            shift and go to state 32
    TkNum           shift and go to state 33
    TkString        shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 28
    TkOpenPar       shift and go to state 34

    embed                          shift and go to state 42
    factor                         shift and go to state 31
    term                           shift and go to state 38
    concatPrint                    shift and go to state 53
    operadorBool                   shift and go to state 27
    addingOperator                 shift and go to state 30
    expresion                      shift and go to state 43

state 12

    (27) singleInstruccion -> read .

    TkSemicolon     reduce using rule 27 (singleInstruccion -> read .)
    TkCBlock        reduce using rule 27 (singleInstruccion -> read .)
    TkGuard         reduce using rule 27 (singleInstruccion -> read .)
    TkOd            reduce using rule 27 (singleInstruccion -> read .)
    TkFi            reduce using rule 27 (singleInstruccion -> read .)


state 13

    (38) For -> TkFor . TkId TkIn expresion TkTo expresion TkArrow bloque TkRof

    TkId            shift and go to state 54


state 14

    (25) Instruccion -> singleInstruccion .

    TkSemicolon     reduce using rule 25 (Instruccion -> singleInstruccion .)
    TkCBlock        reduce using rule 25 (Instruccion -> singleInstruccion .)


state 15

    (56) read -> TkRead . TkId

    TkId            shift and go to state 55


state 16

    (24) Instruccion -> Do .

    TkSemicolon     reduce using rule 24 (Instruccion -> Do .)
    TkCBlock        reduce using rule 24 (Instruccion -> Do .)


state 17

    (29) If -> TkIf . condicion TkArrow bloque variasGuardias TkFi
    (30) If -> TkIf . condicion TkArrow singleInstruccion variasGuardias TkFi
    (31) If -> TkIf . condicion TkArrow expresion variasGuardias TkFi
    (32) If -> TkIf . TkOpenPar condicion TkClosePar TkArrow bloque variasGuardias TkFi
    (33) If -> TkIf . TkOpenPar condicion TkClosePar TkArrow singleInstruccion variasGuardias TkFi
    (34) If -> TkIf . TkOpenPar condicion TkClosePar TkArrow expresion variasGuardias TkFi
    (45) condicion -> . expresion
    (46) condicion -> . condicion operadorBool expresion
    (67) expresion -> . term
    (68) expresion -> . addingOperator term
    (69) expresion -> . operadorBool expresion
    (70) expresion -> . expresion addingOperator term
    (71) expresion -> . expresion relacion expresion
    (72) expresion -> . embed
    (75) term -> . factor
    (76) term -> . term multiplyingOperator factor
    (73) addingOperator -> . TkPlus
    (74) addingOperator -> . TkMinus
    (47) operadorBool -> . TkAnd
    (48) operadorBool -> . TkOr
    (49) operadorBool -> . TkNot
    (88) embed -> . TkMax TkOpenPar TkId TkClosePar
    (89) embed -> . TkMin TkOpenPar TkId TkClosePar
    (90) embed -> . TkAtoi TkOpenPar TkId TkClosePar
    (91) embed -> . TkSize TkOpenPar TkId TkClosePar
    (80) factor -> . TkId
    (81) factor -> . TkNum
    (82) factor -> . TkString
    (83) factor -> . TkTrue
    (84) factor -> . TkFalse
    (85) factor -> . TkMinus TkNum
    (86) factor -> . TkOpenPar expresion TkClosePar
    (87) factor -> . TkId TkOBracket expresion TkCBracket

    TkOpenPar       shift and go to state 57
    TkPlus          shift and go to state 35
    TkMinus         shift and go to state 25
    TkAnd           shift and go to state 29
    TkOr            shift and go to state 45
    TkNot           shift and go to state 44
    TkMax           shift and go to state 26
    TkMin           shift and go to state 24
    TkAtoi          shift and go to state 36
    TkSize          shift and go to state 37
    TkId            shift and go to state 32
    TkNum           shift and go to state 33
    TkString        shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 28

    condicion                      shift and go to state 56
    term                           shift and go to state 38
    operadorBool                   shift and go to state 27
    factor                         shift and go to state 31
    embed                          shift and go to state 42
    addingOperator                 shift and go to state 30
    expresion                      shift and go to state 52

state 18

    (28) singleInstruccion -> print .

    TkSemicolon     reduce using rule 28 (singleInstruccion -> print .)
    TkCBlock        reduce using rule 28 (singleInstruccion -> print .)
    TkGuard         reduce using rule 28 (singleInstruccion -> print .)
    TkOd            reduce using rule 28 (singleInstruccion -> print .)
    TkFi            reduce using rule 28 (singleInstruccion -> print .)


state 19

    (26) singleInstruccion -> asignacion .

    TkSemicolon     reduce using rule 26 (singleInstruccion -> asignacion .)
    TkCBlock        reduce using rule 26 (singleInstruccion -> asignacion .)
    TkGuard         reduce using rule 26 (singleInstruccion -> asignacion .)
    TkOd            reduce using rule 26 (singleInstruccion -> asignacion .)
    TkFi            reduce using rule 26 (singleInstruccion -> asignacion .)


state 20

    (22) Instruccion -> If .

    TkSemicolon     reduce using rule 22 (Instruccion -> If .)
    TkCBlock        reduce using rule 22 (Instruccion -> If .)


state 21

    (23) Instruccion -> For .

    TkSemicolon     reduce using rule 23 (Instruccion -> For .)
    TkCBlock        reduce using rule 23 (Instruccion -> For .)


state 22

    (2) bloque -> TkOBlock t TkCBlock .

    TkGuard         reduce using rule 2 (bloque -> TkOBlock t TkCBlock .)
    TkOd            reduce using rule 2 (bloque -> TkOBlock t TkCBlock .)
    TkFi            reduce using rule 2 (bloque -> TkOBlock t TkCBlock .)
    TkRof           reduce using rule 2 (bloque -> TkOBlock t TkCBlock .)
    $end            reduce using rule 2 (bloque -> TkOBlock t TkCBlock .)


state 23

    (21) casoInstrucciones -> casoInstrucciones TkSemicolon . Instruccion
    (22) Instruccion -> . If
    (23) Instruccion -> . For
    (24) Instruccion -> . Do
    (25) Instruccion -> . singleInstruccion
    (29) If -> . TkIf condicion TkArrow bloque variasGuardias TkFi
    (30) If -> . TkIf condicion TkArrow singleInstruccion variasGuardias TkFi
    (31) If -> . TkIf condicion TkArrow expresion variasGuardias TkFi
    (32) If -> . TkIf TkOpenPar condicion TkClosePar TkArrow bloque variasGuardias TkFi
    (33) If -> . TkIf TkOpenPar condicion TkClosePar TkArrow singleInstruccion variasGuardias TkFi
    (34) If -> . TkIf TkOpenPar condicion TkClosePar TkArrow expresion variasGuardias TkFi
    (38) For -> . TkFor TkId TkIn expresion TkTo expresion TkArrow bloque TkRof
    (39) Do -> . TkDo condicion TkArrow bloque variasGuardias TkOd
    (40) Do -> . TkDo condicion TkArrow singleInstruccion variasGuardias TkOd
    (41) Do -> . TkDo condicion TkArrow expresion variasGuardias TkOd
    (42) Do -> . TkDo TkOpenPar condicion TkClosePar TkArrow bloque variasGuardias TkOd
    (43) Do -> . TkDo TkOpenPar condicion TkClosePar TkArrow singleInstruccion variasGuardias TkOd
    (44) Do -> . TkDo TkOpenPar condicion TkClosePar TkArrow expresion variasGuardias TkOd
    (26) singleInstruccion -> . asignacion
    (27) singleInstruccion -> . read
    (28) singleInstruccion -> . print
    (11) asignacion -> . TkId TkAsig listaExpresion
    (12) asignacion -> . TkId TkAsig asignacionArreglos
    (56) read -> . TkRead TkId
    (57) print -> . TkPrint concatPrint
    (58) print -> . TkPrintln concatPrint

    TkIf            shift and go to state 17
    TkFor           shift and go to state 13
    TkDo            shift and go to state 10
    TkId            shift and go to state 9
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 7
    TkPrintln       shift and go to state 11

    Instruccion                    shift and go to state 58
    read                           shift and go to state 12
    singleInstruccion              shift and go to state 14
    Do                             shift and go to state 16
    print                          shift and go to state 18
    asignacion                     shift and go to state 19
    If                             shift and go to state 20
    For                            shift and go to state 21

state 24

    (89) embed -> TkMin . TkOpenPar TkId TkClosePar

    TkOpenPar       shift and go to state 59


state 25

    (74) addingOperator -> TkMinus .
    (85) factor -> TkMinus . TkNum

  ! shift/reduce conflict for TkNum resolved as shift
    TkId            reduce using rule 74 (addingOperator -> TkMinus .)
    TkString        reduce using rule 74 (addingOperator -> TkMinus .)
    TkTrue          reduce using rule 74 (addingOperator -> TkMinus .)
    TkFalse         reduce using rule 74 (addingOperator -> TkMinus .)
    TkMinus         reduce using rule 74 (addingOperator -> TkMinus .)
    TkOpenPar       reduce using rule 74 (addingOperator -> TkMinus .)
    TkNum           shift and go to state 60

  ! TkNum           [ reduce using rule 74 (addingOperator -> TkMinus .) ]


state 26

    (88) embed -> TkMax . TkOpenPar TkId TkClosePar

    TkOpenPar       shift and go to state 61


state 27

    (69) expresion -> operadorBool . expresion
    (67) expresion -> . term
    (68) expresion -> . addingOperator term
    (69) expresion -> . operadorBool expresion
    (70) expresion -> . expresion addingOperator term
    (71) expresion -> . expresion relacion expresion
    (72) expresion -> . embed
    (75) term -> . factor
    (76) term -> . term multiplyingOperator factor
    (73) addingOperator -> . TkPlus
    (74) addingOperator -> . TkMinus
    (47) operadorBool -> . TkAnd
    (48) operadorBool -> . TkOr
    (49) operadorBool -> . TkNot
    (88) embed -> . TkMax TkOpenPar TkId TkClosePar
    (89) embed -> . TkMin TkOpenPar TkId TkClosePar
    (90) embed -> . TkAtoi TkOpenPar TkId TkClosePar
    (91) embed -> . TkSize TkOpenPar TkId TkClosePar
    (80) factor -> . TkId
    (81) factor -> . TkNum
    (82) factor -> . TkString
    (83) factor -> . TkTrue
    (84) factor -> . TkFalse
    (85) factor -> . TkMinus TkNum
    (86) factor -> . TkOpenPar expresion TkClosePar
    (87) factor -> . TkId TkOBracket expresion TkCBracket

    TkPlus          shift and go to state 35
    TkMinus         shift and go to state 25
    TkAnd           shift and go to state 29
    TkOr            shift and go to state 45
    TkNot           shift and go to state 44
    TkMax           shift and go to state 26
    TkMin           shift and go to state 24
    TkAtoi          shift and go to state 36
    TkSize          shift and go to state 37
    TkId            shift and go to state 32
    TkNum           shift and go to state 33
    TkString        shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 28
    TkOpenPar       shift and go to state 34

    embed                          shift and go to state 42
    factor                         shift and go to state 31
    operadorBool                   shift and go to state 27
    addingOperator                 shift and go to state 30
    term                           shift and go to state 38
    expresion                      shift and go to state 62

state 28

    (84) factor -> TkFalse .

    TkMult          reduce using rule 84 (factor -> TkFalse .)
    TkDiv           reduce using rule 84 (factor -> TkFalse .)
    TkMod           reduce using rule 84 (factor -> TkFalse .)
    TkPlus          reduce using rule 84 (factor -> TkFalse .)
    TkMinus         reduce using rule 84 (factor -> TkFalse .)
    TkLess          reduce using rule 84 (factor -> TkFalse .)
    TkGreater       reduce using rule 84 (factor -> TkFalse .)
    TkLeq           reduce using rule 84 (factor -> TkFalse .)
    TkGeq           reduce using rule 84 (factor -> TkFalse .)
    TkEqual         reduce using rule 84 (factor -> TkFalse .)
    TkNEqual        reduce using rule 84 (factor -> TkFalse .)
    TkConcat        reduce using rule 84 (factor -> TkFalse .)
    TkSemicolon     reduce using rule 84 (factor -> TkFalse .)
    TkCBlock        reduce using rule 84 (factor -> TkFalse .)
    TkGuard         reduce using rule 84 (factor -> TkFalse .)
    TkOd            reduce using rule 84 (factor -> TkFalse .)
    TkFi            reduce using rule 84 (factor -> TkFalse .)
    TkArrow         reduce using rule 84 (factor -> TkFalse .)
    TkAnd           reduce using rule 84 (factor -> TkFalse .)
    TkOr            reduce using rule 84 (factor -> TkFalse .)
    TkNot           reduce using rule 84 (factor -> TkFalse .)
    TkClosePar      reduce using rule 84 (factor -> TkFalse .)
    TkComma         reduce using rule 84 (factor -> TkFalse .)
    TkCBracket      reduce using rule 84 (factor -> TkFalse .)
    TkTo            reduce using rule 84 (factor -> TkFalse .)


state 29

    (47) operadorBool -> TkAnd .

    TkPlus          reduce using rule 47 (operadorBool -> TkAnd .)
    TkMinus         reduce using rule 47 (operadorBool -> TkAnd .)
    TkAnd           reduce using rule 47 (operadorBool -> TkAnd .)
    TkOr            reduce using rule 47 (operadorBool -> TkAnd .)
    TkNot           reduce using rule 47 (operadorBool -> TkAnd .)
    TkMax           reduce using rule 47 (operadorBool -> TkAnd .)
    TkMin           reduce using rule 47 (operadorBool -> TkAnd .)
    TkAtoi          reduce using rule 47 (operadorBool -> TkAnd .)
    TkSize          reduce using rule 47 (operadorBool -> TkAnd .)
    TkId            reduce using rule 47 (operadorBool -> TkAnd .)
    TkNum           reduce using rule 47 (operadorBool -> TkAnd .)
    TkString        reduce using rule 47 (operadorBool -> TkAnd .)
    TkTrue          reduce using rule 47 (operadorBool -> TkAnd .)
    TkFalse         reduce using rule 47 (operadorBool -> TkAnd .)
    TkOpenPar       reduce using rule 47 (operadorBool -> TkAnd .)


state 30

    (68) expresion -> addingOperator . term
    (75) term -> . factor
    (76) term -> . term multiplyingOperator factor
    (80) factor -> . TkId
    (81) factor -> . TkNum
    (82) factor -> . TkString
    (83) factor -> . TkTrue
    (84) factor -> . TkFalse
    (85) factor -> . TkMinus TkNum
    (86) factor -> . TkOpenPar expresion TkClosePar
    (87) factor -> . TkId TkOBracket expresion TkCBracket

    TkId            shift and go to state 32
    TkNum           shift and go to state 33
    TkString        shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 28
    TkMinus         shift and go to state 64
    TkOpenPar       shift and go to state 34

    factor                         shift and go to state 31
    term                           shift and go to state 63

state 31

    (75) term -> factor .
